--- a/Index gambar dan css/index.css
+++ b/Index gambar dan css/index.css
@@ -18,6 +18,7 @@ body, input, select, textarea {
 .topnav {
 overflow: hidden;
 background-color: #333;
+  width: 100vw;
 }
 
 /* Style the topnav links */
@@ -131,13 +132,10 @@ background: #ccc;
     border-top-right-radius: 10px;
     border-bottom-left-radius: 10px;
 }
-.blog-card > img{
+.blog-card > a img {
     width: 100%;
     height: 100%;
 }
-
-
-
 
 /** PAKET WISATA **/
 #paket{
@@ -174,10 +172,6 @@ img.box{
   box-shadow: 0px 13px 15px 0px rgba(0,0,0,0.75);
   text-align: center;
 }
-
-
-
-
 
 .left-section{
   width: 40%;
@@ -224,8 +218,72 @@ footer{
   color: white;
   padding: 10px;
   margin-top:33%;
+  width: 98vw;
 }
 
+/**CSS Wisata**/
+.separator,#artikel{
+    /* display: flex; */
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.wisata h1{
+  color: black;
+  text-align: center;
+  font-size: 3.5vw;
+  font-family: Raleway;
+  margin-bottom: -5px;
+}
+.wisata img{
+  width: 100vw;
+  height: 70vh;
+  position: relative;
+}
+.abovewisata{
+  text-align: center;
+}
+.abovewisata a{
+  color: #50CCB3;
+  font-size: 1.5vw;
+  margin: 20px;
+  text-align: center;
+}
+.gambarwisata{
+  text-align: center;
+}
+.gambarwisata img{
+  position: relative;
+  width: 30vw;
+  height: 45vh;
+  margin: 20px;
+  border-radius: 5%;
+}
+#saranwisata{
+  margin-top: 10vh;
+  margin-bottom: -30%;;
+  height: 70vh;
+  width: 100vw;
+  background-color: #50CCB3;
+}
+p.saran{
+text-align: center;
+font-family:Raleway;
+font-size: 2vw;
+color:#50CCB3 ;
+margin: 10px;
+padding-bottom: 2px;
+}
+p.ijen{
+  text-indent:5%;
+  font-size: 1.3vw;
+  text-align: justify;
+  color: black;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-bottom: 50px;
+  font-family: Raleway;
+}
 
 
 /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
