--- a/Index gambar dan css/index.css
+++ b/Index gambar dan css/index.css
@@ -197,11 +197,14 @@ img.box{
   box-shadow: 0px 13px 15px 0px rgba(0,0,0,0.75);
   text-align: center;
 }
-img.saran a{
+a img.saran{
   width: 100%;
   height: 50%;
 }
-
+img.saran{
+  width: 100%;
+  height: 50%;
+}
 #praFooter{
   margin-top:35%;
   height: 10vh;
