--- a/Index gambar dan css/index.css
+++ b/Index gambar dan css/index.css
@@ -173,17 +173,6 @@ img.box{
   text-align: center;
 }
 
-.left-section{
-  width: 40%;
-  height: 100%;
-  background-color: rgb(206, 27, 40);
-  color: white;
-  float: left;
-}
-.left-section h1{
-  font-size: 38px;
-  margin: 40px;
-}
 .saran-card{
   background-color: white;
   margin: 50px;
@@ -204,16 +193,6 @@ a img.saran{
 img.saran{
   width: 100%;
   height: 50%;
-}
-#praFooter{
-  margin-top:35%;
-  height: 10vh;
-  width: 100vw;
-  background-color: #333;
-}
-.contact{
-  float: right;
-  margin-right: 100px;
 }
 /**FOOTER**/
 footer{
@@ -342,6 +321,76 @@ input.tambahwisata:hover{
     float: none;
     width: 100%;
   }
+  .blog-card > a img {
+      width: 100%;
+      height: 50%;
+  }
+  .blog-card{
+      text-align: center;
+      width: 20vw;
+      height: 200px;
+      margin: 5px;
+      margin-left: 30px;
+      margin-bottom: -40px;
+      border-top-right-radius: 5px;
+      border-bottom-left-radius: 5px;
+  }
+  .sep-inner h1{
+      color: black;
+      font-size: 5vw;
+  }
+  .blog-card h3{
+    font-size: 3vw;
+  }
+  .left-section{
+    width: 40%;
+    height: 100%;
+  }
+  .left-section h1{
+    font-size: 38px;
+    margin: 40px;
+  }
+  img.box{
+    width: 30%;
+    height: 20%;
+  }
+  .paket-card{
+    margin: 25px;
+    padding: 20px;
+    width: 20vw;
+    height: 20vh;
+    margin-left: 40px;
+    font-size: 2vw;
+    text-align: center;
+  }
+  .saran-card{
+    margin: 5px;
+    width: 20vw;
+    height: 27vh;
+    float: left;
+    margin-left: 40px;
+  }
+  .saran-card h1{
+    margin: 2px;
+    font-size: 2.5vw;
+  }
+  .saran-card p{
+    font-size: 1.5vw;
+  }
+  a img.saran{
+    width: 100%;
+    height: 40%;
+  }
+  footer{
+    margin-top:55%;
+    font-size: 2.5vw;
+  }
+  #paket{
+  margin-top: 5vh;
+  margin-bottom: 5vh;
+  width: 101vw;
+  }
+
 }
 
 
@@ -356,8 +405,6 @@ input.tambahwisata:hover{
     width: 90%;
     margin: 0;
     padding: 14px;
-  }
-
   }
   .topnav input[type=text] {
     border: 1px solid #ccc;
