--- a/Index gambar dan css/index.css
+++ b/Index gambar dan css/index.css
@@ -316,7 +316,7 @@ input.tambahwisata:hover{
 }
 
 /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 480px) {
   .topnav a {
     float: none;
     width: 100%;
@@ -367,8 +367,7 @@ input.tambahwisata:hover{
     margin: 5px;
     width: 20vw;
     height: 27vh;
-    float: left;
-    margin-left: 40px;
+    float: center;
   }
   .saran-card h1{
     margin: 2px;
@@ -390,11 +389,10 @@ input.tambahwisata:hover{
   margin-bottom: 5vh;
   width: 101vw;
   }
-
 }
 
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 720px) {
   .topnav .search-container {
     float: none;
   }
@@ -409,7 +407,7 @@ input.tambahwisata:hover{
   .topnav input[type=text] {
     border: 1px solid #ccc;
   }
-  /* .blog-card > a img {
+  .blog-card > a img {
       width: 100%;
       height: 50%;
   }
@@ -456,7 +454,7 @@ input.tambahwisata:hover{
     width: 20vw;
     height: 37vh;
     float: left;
-    margin-left: 50px;
+    margin-left: 30px;
   }
   .saran-card h1{
     margin: 2px;
@@ -478,8 +476,8 @@ input.tambahwisata:hover{
   margin-top: 5vh;
   margin-bottom: 5vh;
   width: 101vw;
-  height: 90vh;
-  } */
+  height: 95vh;
+  }
 }
 
-  /* end navbar */
+  /* end navbar
