--- a/Index gambar dan css/index.css
+++ b/Index gambar dan css/index.css
@@ -316,21 +316,20 @@ input.tambahwisata:hover{
 }
 
 /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 540px) {
   .topnav a {
     float: none;
     width: 100%;
   }
   .blog-card > a img {
-      width: 100%;
-      height: 50%;
-  }
+      width: 130%;
+      height: 70%;
+    }
   .blog-card{
       text-align: center;
       width: 20vw;
       height: 200px;
-      margin: 5px;
-      margin-left: 30px;
+      margin-left: 15%;
       margin-bottom: -40px;
       border-top-right-radius: 5px;
       border-bottom-left-radius: 5px;
@@ -341,6 +340,7 @@ input.tambahwisata:hover{
   }
   .blog-card h3{
     font-size: 3vw;
+    margin-bottom: 3%;
   }
   .left-section{
     width: 40%;
@@ -355,20 +355,26 @@ input.tambahwisata:hover{
     height: 20%;
   }
   .paket-card{
-    margin: 25px;
-    padding: 20px;
-    width: 20vw;
-    height: 20vh;
+    margin: 20px;
     margin-left: 40px;
+    padding: 10px;
+    width: 20%;
+    height: 35%;
     font-size: 2vw;
     text-align: center;
   }
+  .paket-card h1{
+    font-size: 2.5vw;
+  }
+  .paket-card p{
+    font-size: 2vw;
+  }
   .saran-card{
-    margin: 5px;
-    width: 20vw;
-    height: 27vh;
+    margin: 2px;
+    width: 25%;
+    height: 35%;
     float: left;
-    margin-left: 40px;
+    margin-left: 20px;
   }
   .saran-card h1{
     margin: 2px;
@@ -379,16 +385,17 @@ input.tambahwisata:hover{
   }
   a img.saran{
     width: 100%;
-    height: 40%;
+    height: 60%;
   }
   footer{
     margin-top:55%;
     font-size: 2.5vw;
   }
   #paket{
-  margin-top: 5vh;
-  margin-bottom: 5vh;
-  width: 101vw;
+  margin-top: 15%;
+  margin-bottom: 5%;
+  width: 90%;
+  padding: 30px;
   }
 
 }
