--- a/Index gambar dan css/index.css
+++ b/Index gambar dan css/index.css
@@ -299,7 +299,7 @@ p.ijen{
   margin-left: 40px;
   margin-top: 0px;
 }
-input.tambahwisata{
+#tambahwisata{
   width: 11vw;
   height: 7vh;
   margin: 80px;
@@ -311,8 +311,16 @@ input.tambahwisata{
   border-radius: 100px;
   border:none;
 }
-input.tambahwisata:hover{
+#tambahwisata:hover{
   background:#50CCB3;
+}
+
+footer.asalusul{
+  background-color: #333;
+  color: white;
+  padding: 10px;
+  margin-top:0%;
+  width: 98vw;
 }
 
 /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
@@ -427,3 +435,38 @@ input.tambahwisata:hover{
 }
 
   /* end navbar */
+  /* The Modal (background) */
+  .modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  /* Modal Content */
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+  /* The Close Button */
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
