--- a/Index gambar dan css/index.css
+++ b/Index gambar dan css/index.css
@@ -323,6 +323,76 @@ footer.asalusul{
   width: 98vw;
 }
 
+.formcreate{
+  position: relative;
+  margin: 7% auto;
+  height: 50%;
+  width: 30%;
+  background:#878d91;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  border-radius: 10%;
+  margin-top: -1%;
+  padding-top:30px ;
+}
+.formcreate input{
+margin-left: 20%;
+margin-bottom:0px;
+width: 65%;
+height: 8%;
+font-family: Raleway;
+font-size: 1.2vw;
+border-radius: 5px;
+border-color: none;
+border-style: none;
+}
+input.upload_gambar{
+  margin-bottom: 0px;
+  text-align: center;
+}
+.post-btn{
+  border-style: solid;
+  border-radius: 10px;
+  color: black;
+  margin-top: 1%;
+}
+textarea{
+  margin-left:20%;
+  text-align: center;
+  height: 40%;
+  margin-bottom: 0px;
+}
+p.textarea{
+  margin-left: 0px;
+  margin-top: -5%;
+  margin-bottom: 0px;
+  font-family: sans-serif;
+  color: white;
+  font-size: 1.5vw;
+  text-align: center;
+}
+a input.post-btn{
+  background-color: #ffff;
+  width: 40%;
+  height: 7%;
+  font-size: 1vw;
+  margin-top: -15%;
+  margin-bottom: 4%;
+  border-style: none;
+}
+a:hover input.post-btn{
+  background-color: #5c5f61;
+}
+h3.register{
+  font-family: Raleway;
+  font-size: 2vw;
+  color: black;
+  text-align: center;
+  margin-top: 3%;
+}
+body.tambahwisata{
+  background-image:url("../Index gambar dan css/Background.jpg");
+}
+
 /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
 @media screen and (max-width: 540px) {
   .topnav a {
