--- a/Index gambar dan css/index.css
+++ b/Index gambar dan css/index.css
@@ -393,6 +393,57 @@ body.tambahwisata{
   background-image:url("../Index gambar dan css/Background.jpg");
 }
 
+/* content-tentang */
+body.tentang{
+  background-color: #50CCB3;
+  background-size: cover;
+}
+div.content-tentang{
+  margin-left: 38%;
+  margin-top: 5%;
+}
+
+h2.tentang{
+  color: #ffffff;
+  font-family: Raleway;
+  font-size: 3vw;
+  margin-left: -4%;
+}
+h1.tentang{
+  margin-left: 5%;
+  color: #ffffff;
+  font-family: Raleway;
+  font-size: 2.5vw;
+}
+img.tentang{
+  width: 5%;
+}
+img.tentang-lokasi{
+  width: 6%;
+  margin-bottom: -10%;
+}
+p.tentang{
+  color: #fefefe;
+  margin-left: 8%;
+  margin-top: -3%
+}
+p.tentang-lokasi{
+  margin-left: 8%;
+  color: #fefefe;
+}
+.tentang{
+  text-decoration: none;
+}
+p.tentang:hover{
+  color: #000000;
+}
+footer.tentang{
+  background-color: #333;
+  color: white;
+  padding: 10px;
+  margin-top:3%;
+  width: 98vw;
+}
 /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
 @media screen and (max-width: 540px) {
   .topnav a {
