--- a/Index gambar dan css/index.css
+++ b/Index gambar dan css/index.css
@@ -50,27 +50,11 @@ font-size: 17px;
 border: none;
 }
 
-.topnav .search-container button {
-float: right;
-padding: 6px 10px;
-margin-top: 8px;
-margin-right: 16px;
-background: #ddd;
-font-size: 17px;
-border: none;
-cursor: pointer;
-}
-
-.topnav .search-container button:hover {
-background: #ccc;
-}
-
 
 .judul{
     width: 100vw;
     height: 100vh;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     color: white;
@@ -92,7 +76,6 @@ background: #ccc;
     display: block;
     padding: 1em;
     margin: 20px auto;
-
 }
 .judul a.judul-btn{
     text-decoration: none;
@@ -106,12 +89,10 @@ background: #ccc;
     background-color: white;
     border-color: white;
 }
-.login-modal a{
-  color: #03ffcc;
-  text-decoration: none;}
 
-/**Card**/
-.separator,#blog{
+
+/**Destinasi Wisata**/
+#blog{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -140,7 +121,8 @@ background: #ccc;
     height: 100%;
 }
 
-/** PAKET WISATA **/
+
+/** 4 INFO**/
 #paket{
   margin-top: 10vh;
   height: 70vh;
@@ -148,17 +130,6 @@ background: #ccc;
   background-color: #50CCB3;
 }
 
-.left-section{
-  width: 40%;
-  height: 100%;
-  background-color: rgb(206, 27, 40);
-  color: white;
-  float: left;
-}
-.left-section h1{
-  font-size: 38px;
-  margin: 40px;
-}
 img.box{
   width: 40%;
   height: 40%;
@@ -176,6 +147,7 @@ img.box{
   text-align: center;
 }
 
+/* Saran */
 .saran-card{
   background-color: white;
   margin: 50px;
@@ -193,10 +165,8 @@ a img.saran{
   width: 100%;
   height: 50%;
 }
-img.saran{
-  width: 100%;
-  height: 50%;
-}
+
+
 /**FOOTER**/
 footer{
   background-color: #333;
@@ -206,9 +176,8 @@ footer{
   width: 98vw;
 }
 
-/**CSS Wisata**/
-.separator,#artikel{
-    /* display: flex; */
+/**CSS Pilih Wisata**/
+#artikel{
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -244,13 +213,7 @@ footer{
   margin: 20px;
   border-radius: 5%;
 }
-#saranwisata{
-  margin-top: 10vh;
-  margin-bottom: -20%;;
-  height: 70vh;
-  width: 100vw;
-  background-color: #50CCB3;
-}
+
 p.saran{
 text-align: center;
 font-family:Raleway;
@@ -258,6 +221,17 @@ font-size: 2.5vw;
 color:#50CCB3 ;
 margin: 10px;
 padding-bottom: 2px;
+}
+#saranwisata{
+  margin-top: 10vh;
+  margin-bottom: -20%;;
+  height: 70vh;
+  width: 100vw;
+  background-color: #50CCB3;
+}
+img.saran{
+  width: 100%;
+  height: 50%;
 }
 .Ijen1{
   margin-left: 80px;
@@ -326,6 +300,14 @@ footer.asalusul{
   width: 98vw;
 }
 
+/* Tambah Wisata button */
+h3.register{
+  font-family: Raleway;
+  font-size: 2vw;
+  color: black;
+  text-align: center;
+  margin-top: 3%;
+}
 .formcreate{
   position: relative;
   margin: 7% auto;
@@ -336,6 +318,10 @@ footer.asalusul{
   border-radius: 10%;
   margin-top: -1%;
   padding-top:30px ;
+}
+input.upload_gambar{
+  margin-bottom: 0px;
+  text-align: center;
 }
 .formcreate input{
 margin-left: 20%;
@@ -348,23 +334,12 @@ border-radius: 5px;
 border-color: none;
 border-style: none;
 }
-input.upload_gambar{
-  margin-bottom: 0px;
-  text-align: center;
-}
+
 .post-btn{
   border-style: solid;
   border-radius: 10px;
   color: black;
   margin-top: 1%;
-}
-textarea{
-  margin-left:20%;
-  text-align: center;
-  height: 40%;
-  width: 65%;
-  margin-bottom: 0px;
-  border-radius: 5%;
 }
 p.textarea{
   margin-left: 35px;
@@ -374,6 +349,14 @@ p.textarea{
   color: white;
   font-size: 1.5vw;
   text-align: center;
+}
+textarea{
+  margin-left:20%;
+  text-align: center;
+  height: 40%;
+  width: 65%;
+  margin-bottom: 0px;
+  border-radius: 5%;
 }
 a input.post-btn{
   background-color: #ffff;
@@ -387,13 +370,6 @@ a input.post-btn{
 }
 a:hover input.post-btn{
   background-color: #5c5f61;
-}
-h3.register{
-  font-family: Raleway;
-  font-size: 2vw;
-  color: black;
-  text-align: center;
-  margin-top: 3%;
 }
 body.tambahwisata{
   background-image:url("../Index gambar dan css/Background.jpg");
@@ -621,3 +597,6 @@ footer.tambahdata{
     text-decoration: none;
     cursor: pointer;
   }
+  .login-modal a{
+    color: #03ffcc;
+    text-decoration: none;}
